--- a/index.html
+++ b/index.html
@@ -15,7 +15,19 @@
 </head>
 
 <body>
-
+  <header>
+    <nav>
+      <div class="logo">
+        <h1>Fun Bus</h1>
+      </div>
+      <div class="links-parent">
+        <a href="#">Home</a>
+        <a href="#">About Us</a>
+        <a href="#">Blog</a>
+        <a href="#">Contact</a>
+      </div>
+    </nav>
+  </header>
   
      
   <div class="container home">
