--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-  <header>
     <nav>
       <div class="logo">
         <h1>Fun Bus</h1>
@@ -27,11 +26,20 @@
         <a href="#">Contact</a>
       </div>
     </nav>
-  </header>
-  
-     
+    <div class="border"></div>
+
   <div class="container home">
    
+    <header>
+      <img src="img/fun-bus.jpg" alt="A fun bus">
+
+      <div class="heading">
+        <h2>Welcome To Fun Bus!</h2>
+        <p>Traveling expedition modern, clean webdesign blogger clean website theme website modern. Design pretty design, travelblogger adventure WordPress wanderlust theme blogger website expedition theme travelblogger. Adventure fun traveler pretty design website expedition.</p>
+      </div>
+    </header>
+    
+
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
@@ -63,18 +71,16 @@
       <div class="destination">
         <h4>Fun In The Sun</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>
       </div>
       <div class="destination">
         <h4>Mountain Excursion</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
-      </div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>      </div>
       <div class="destination">
         <h4>Island Getaway</h4>
         <p>Expedition excursion design excursion fun, clean simple organized WordPress Travel colorful webdesign. Traveler blogger website design expedition clean excursion traveling.</p>
-        <div class="btn">Sign Me Up!</div>
-      </div>
+        <div class="btn"><a href="#">Sign Me Up!</a></div>      </div>
     </section>
   </div><!-- container -->
 
