--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Fun Bus Travel Agency - Solution</title>
 
@@ -15,6 +16,8 @@
 </head>
 
 <body>
+
+  <div class="container home">
     <nav>
       <div class="logo">
         <h1>Fun Bus</h1>
@@ -27,9 +30,6 @@
       </div>
     </nav>
     <div class="border"></div>
-
-  <div class="container home">
-   
     <header>
       <img src="img/fun-bus.jpg" alt="A fun bus">
 
@@ -39,7 +39,6 @@
       </div>
     </header>
     
-
     <section class="content-section">
       <div class="text-content">
         <h2>Let's Go!</h2>
